# dexter

./: .copilot-instructions.md  README.md  env.example  pyproject.toml
src/dexter/: agent.py  cli.py  model.py  prompts.py  schemas.py
src/dexter/evals/: evaluator.py
src/dexter/tools/: __init__.py
src/dexter/tools/finance/: fundamentals.py  prices.py
src/dexter/tools/search/: tavily.py
src/dexter/tools/yfinance/: estimates.py  filings.py  fundamentals.py  insider.py  metrics.py  news.py  prices.py
src/dexter/tools/yfinance/agent/: base.py  stanley_druckenmiller.py
src/dexter/utils/: context.py  env.py  intro.py  model_selector.py  ui.py
tests/: conftest.py
tests/integration/yfinance/: test_yfinance_fundamentals.py  test_yfinance_insider.py
tests/integration/yfinance/agent/: test_stanley_druckenmiller.py
