[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexter"
version = "1.0.1"
description = "AI agent for financial analysis."
authors = []
requires-python = ">=3.13"
dependencies = [
    "googlenewsdecoder>=0.1.7",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-tavily>=0.2.13",
    "langsmith>=0.4.34",
    "openai>=2.2.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
    "pytest>=8.0.0",
]

[project.scripts]
dexter-agent = "dexter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
